add statistic for user and gov